--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,6 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
@@ -13,13 +9,10 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
-jobs:  # This workflow contains a single job called "build"
+jobs:
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
@@ -32,10 +25,17 @@ jobs:  # This workflow contains a single job called "build"
           repository: aprotim/marked
           path: marked
 
-      - name: List current directory
-        run: ls . */
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: ./marked/bin/marked -i ./main/content.md
+      - name: Build html
+        run: |
+          sed '0,/^\s*<!--\s*Start content\s*-->/I!d' main/template.html > resume.html 
+          ./marked/bin/marked -i ./main/content.md >> resume.html
+          sed '/^\s*<!--\s*End content\s*-->/I,$!d' main/template.html >> resume.html 
+          
+      - name: Upload resume
+        uses: actions/upload-artifact@v3
+        with:
+          name: resume
+          path: resume.html
+          
 
  
