Make tidy actually indent.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           sed '0,/^\s*<!--\s*Start content\s*-->/I!d' main/template.html > resume.html 
           ./marked/bin/marked -i ./main/content.md >> resume.html
           sed '/^\s*<!--\s*End content\s*-->/I,$!d' main/template.html >> resume.html
-          tidy -m resume.html
+          tidy -q -i -m resume.html
           
       - name: Upload resume
         uses: actions/upload-artifact@v3
