--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,12 @@ on:
   push:
     branches: [ master ]
     paths:
-      - content.md
-      - template.html
+      - 'content.md'
+      - 'template.html'
   pull_request:
     branches: [ master ]
-      - content.md
-      - template.html
+      - 'content.md'
+      - 'template.html'
 
 
   # Allows you to run this workflow manually from the Actions tab
